examples/test/testpolicy6443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6443
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key8: value21
      key3: value12
      key7: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value30
      podSelector:
        matchLabels:
          key45: value15
          key25: value36
          key21: value42
